--- a/roles/wireguard/tasks/client.yml
+++ b/roles/wireguard/tasks/client.yml
@@ -7,7 +7,7 @@
     owner: root
     group: root
   notify:
-    - restart wireguard
+    - Restart wireguard
 
 - name: Configure firewall for client
   include_tasks: firewall.yml
